data/derived/sp14/progs/unify/prog4587.ml.out
Characters 50-56:
  let (x,y) = f b in (x<>b)),b);;
                     ^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
